Version 7.0.1
- Fixed incorrect casts of arrays

Version 7.0.0
- Added Spin2 structures (basically small objects)
- Added Spin2 TASK functions
- Added BOOL debug modifier for -g
- Added some of the v44 Spin2 builtin methods like byteswap
- Added warning for rep without @
- Added %QUAD keyword for 64 bit variables in Spin2
- Added some experimental optimizations (thanks to Ada)
- Added ability to fall back to more compatible inline assembly (-Ono-fast-inline-asm)
- Allowed RET in fcache'd inline assembly
- Cleaned up the Spin parser to enable direct access to struct/obj members
- Fixed long relative branches (tjz, djnz, etc.)
- Fixed incorrect handling of simple for loops with unsigned variables
- Fixed return values from fwrite and fread
- Fixed result type of ?:, particularly for long long
- Improved some debug error messages
- Only use the stack for variables whose address is actually taken (thanks to Ada for this!)
- Modified _BlockDevice data structure (used for littlefs, but someday may be used for fatfs too)
- Made _float_tointeger() saturate when the result is too big/small
- Made off_t be 64 bits, to allow for files > 2GB
- Made the preprocessor case-insensitive by default (for Spin and BASIC)
- Revised file systems to all read from devices; this makes it possible to do loopback file systems or to use non-standard devices for file systems
- Suppress some asm warnings when building assembler output

Version 6.9.10
- Fix compilation error when GETWORD is replaced by MOV or MUL
- Fix varargs calls in nucode when no varying arguments present
- Fix an incorrect warning about locals shadowing globals in C

Version 6.9.9
- Fixed `--compress` flag on Windows
- Added `--zip` flag to flexcc
- Improved handling of file names in .zip output
- Improved error message for sizeof(x) when x is undefined

Version 6.9.8
- Fix `#foo+CONST` calculation

Version 6.9.7
- Fixed infinite loop when CORDIC and Read/Write optimizations fight