@@ -1,5 +1,6 @@
 Version 7.0.1
 - Fixed incorrect casts of arrays
+- Put a dummy entry at the beginning of the method table, to represent NULL
 
 Version 7.0.0
 - Added Spin2 structures (basically small objects)
